@@ -65,7 +65,7 @@ public class MapGenStructureIO {
 			Class<? extends StructureStart> oclass = startNameToClassMap.get(tagCompound.getString("id"));
 
 			if (oclass != null) {
-				structurestart = oclass.newInstance();
+				structurestart = oclass.getConstructor().newInstance();
 			}
 		} catch (Exception exception) {
 			LOGGER.warn("Failed Start with id {}", tagCompound.getString("id"));
@@ -89,7 +89,7 @@ public class MapGenStructureIO {
 			Class<? extends StructureComponent> oclass = componentNameToClassMap.get(tagCompound.getString("id"));
 
 			if (oclass != null) {
-				structurecomponent = oclass.newInstance();
+				structurecomponent = oclass.getConstructor().newInstance();
 			}
 		} catch (Exception exception) {
 			LOGGER.warn("Failed Piece with id {}", tagCompound.getString("id"));
